--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,7 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background-color: rgba(0,0,0,0);
+	background-color: rgba(0, 0, 0, 0);
 }
 
 /* Handle */
